# hashgate

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: SPEC_canonical.md  claude_code_setup.md  e2e_checklist.md  threat_model.md
examples/pr_merge_gate/: README.md  pr_merge_gate.py
scripts/: verify_install.sh
src/hashgate/: __init__.py  action.py  canonical.py  canonical_legacy.py  errors.py  evidence.py  gate.py  ownership.py  policy.py  redact.py  store.py  types.py
src/hashgate/adapters/: __init__.py  sqlalchemy_store.py
src/hashgate/integrations/: __init__.py
src/hashgate/integrations/claude_code/: __init__.py  actions.py  approvals.py  cli.py  config.py  hook_wrapper.py  render.py  rules.py  server.py  ui.py
src/hashgate/integrations/claude_code/web/: _pending_list.html  app.css  base.html  bundle.html  detail.html  history.html  login.html  pending.html
tests/: conftest.py  test_bundle_golden.py  test_canonical.py  test_canonical_golden.py  test_canonical_legacy.py  test_cc_actions.py  test_cc_actions_v02.py  test_cc_cli.py  test_cc_config.py  test_cc_deny_final.py  test_cc_entry_guards.py  test_cc_rules.py  test_cc_server.py  test_cc_ui.py  test_cc_wrapper.py  test_evidence.py  test_example_pr_merge.py  test_frozen.py  test_gate.py  test_gate_structure.py  test_ownership.py  test_policy.py  test_redact.py  test_store.py  test_types.py
tests/fixtures/: bundle_happy.json  bundle_refusal.json  canonical_golden.json  pretooluse_bash_chained_push.json  pretooluse_bash_harmless.json  pretooluse_bash_push.json  pretooluse_non_bash.json
