[project]
name = "hashgate"
version = "0.1.0"
description = "Execution governance for AI agents: preview -> canonical hash -> operator accept -> server-side re-derivation -> apply. Fail-closed, idempotent, audited."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "hashgate contributors" }]
keywords = ["ai-governance", "human-oversight", "agents", "audit", "eu-ai-act"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
# The core is deliberately dependency-free.
dependencies = []

[project.urls]
# placeholders until the public repository exists
Homepage = "https://github.com/TODO-owner/hashgate"
Repository = "https://github.com/TODO-owner/hashgate"
Documentation = "https://github.com/TODO-owner/hashgate#readme"
Changelog = "https://github.com/TODO-owner/hashgate/releases"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0"]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[project.scripts]
hashgate = "hashgate.integrations.claude_code.cli:main"
hashgate-hook-server = "hashgate.integrations.claude_code.server:main"
hashgate-hook-wrapper = "hashgate.integrations.claude_code.hook_wrapper:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "ruff>=0.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hashgate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.uv]
# Editable installs are unreliable on this platform (site skips
# underscore-prefixed .pth files — see CONTRIBUTING.md), so the dev flow is
# non-editable: `uv sync --no-editable` / `uv run --no-editable …`.
# cache-keys make uv rebuild the project whenever a source file changes.
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.py" }]
